--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "sass dev/sass/style.scss > docs/style.css | minify docs/style.css > docs/style.min.css | pug dev/index.pug -o docs/"
   },
   "author": "Joel Sanchez",
   "license": "ISC"
